Fixes unmoveable innerblocks issue in blocks/column-element by removing overflow:hidden

--- a/src/blocks/columns-element/editor.scss
+++ b/src/blocks/columns-element/editor.scss
@@ -2,7 +2,6 @@
   > .block-editor-inner-blocks {
     > .block-editor-block-list__layout {
       margin: 0;
-      overflow: hidden;
       > .block-list-appender {
         margin: 0;
         > .block-editor-block-drop-zone {
